src/app/app.component.css
main.mainWrapper {
  min-width: 300px;
  min-height: 450px;
  height: 450px;
  width: 300px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.mainContainer {
  padding: 20px;
  display: flex;
  height: 100%;
  margin-top: 25px;
  flex-direction: column;
  justify-content: space-between;
}

.wishlistContainer {
  position: absolute;
  top: 65px;
  right: 10px;
}

